--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<!-- Top nav bar -->
+<!-- Header session -->
 <div class="top-bar w-100">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-dark">
@@ -49,7 +49,8 @@
                                             <li><a class="dropdown-item">Buy homepage</a></li>
                                         </div>
                                         <div class="col">
-                                            <li><h5 class="dropdown-header fs-6 fw-bolder fs-6 fw-bolder">Homes for Sale</h5></li>
+                                            <li><h5 class="dropdown-header fs-6 fw-bolder fs-6 fw-bolder">Homes for
+                                                Sale</h5></li>
                                             <li><a class="dropdown-item" href="#">BaoLoc Homes For Sale</a></li>
                                             <li><a class="dropdown-item" href="#">BaoLoc New Home Communities</a></li>
                                             <li><a class="dropdown-item" href="#">BaoLoc New Construction and Plans</a>
@@ -152,7 +153,9 @@
     </nav>
 
 </div>
+<!--Header session end-->
 
+<!--Body session-->
 <!--search and background pic-->
 <div class="search-container w-100 d-flex align-items-center">
 
@@ -215,7 +218,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -252,7 +255,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -289,7 +292,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -326,7 +329,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -375,7 +378,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -412,7 +415,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -449,7 +452,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -486,7 +489,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -535,7 +538,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -572,7 +575,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -609,7 +612,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -646,7 +649,7 @@
                         </div>
                         <div class="row">
                             <div class="col text-center">
-                                <a href="#" class="btn btn-outline-primary">Xem thêm</a>
+                                <a href="./templates/house-detail.html" class="btn btn-outline-primary">Xem thêm</a>
                             </div>
                             <div class="col text-center">
                                 <button class="btn btn-outline-success">Lưu</button>
@@ -663,7 +666,69 @@
     <p>This is xample text 1</p>
 
 </div>
+<!--Body session end-->
 
+<!--Footer session-->
+<div class="bg-light p-3">
+  <footer class="py-5">
+    <div class="row">
+      <div class="col-2">
+        <h5>Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
+      </div>
+
+      <div class="col-2">
+        <h5>Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
+      </div>
+
+      <div class="col-2">
+        <h5>Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
+      </div>
+
+      <div class="col-4 offset-1">
+        <form>
+          <h5>Subscribe to our newsletter</h5>
+          <p>Monthly digest of whats new and exciting from us.</p>
+          <div class="d-flex w-100 gap-2">
+            <label for="newsletter1" class="visually-hidden">Email address</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+            <button class="btn btn-primary" type="button">Subscribe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-between py-4 my-4 border-top">
+      <p>&copy; 2021 Company, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+      </ul>
+    </div>
+  </footer>
+</div>
+<!--Footer session end-->
 
 </body>
 
